[tool.poetry]
name = "tutorial-ppke-cluster"
version = "0.1.0"
description = ""
authors = ["Leonardo Benitez <lsbenitezpereira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
python-dotenv = "*"
Pillow = "*"
accelerate = ">=0.31.0"
compel = "==0.1.8"
datasets = ">=2.19.1"
filelock = "*"
flax = ">=0.4.1"
hf-doc-builder = ">=0.3.0"
huggingface-hub = ">=0.27.0"
requests-mock = "==1.10.0"
importlib_metadata = "*"
invisible-watermark = ">=0.2.0"
isort = ">=5.5.4"
jax = ">=0.4.1"
jaxlib = ">=0.4.1"
Jinja2 = "*"
k-diffusion = ">=0.0.12"
torchsde = "*"
note_seq = "*"
librosa = "*"
numpy = "*"
parameterized = "*"
peft = "==0.7.0"
protobuf = ">=3.20.3,<4"
pytest = "*"
pytest-timeout = "*"
pytest-xdist = "*"
ruff = "==0.1.5"
safetensors = ">=0.3.1"
sentencepiece = ">=0.1.91,!=0.1.92"
GitPython = "<3.1.19"
scipy = "*"
onnx = "*"
regex = "!=2019.12.17"
requests = "*"
tensorboard = "*"
tiktoken = ">=0.7.0"
torch = ">=1.4"
torchvision = "*"
transformers = ">=4.41.2"
urllib3 = "<=2.0.0"
black = "*"
phonemizer = "*"
torchmetrics = "*"
opencv-python = "*"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::numba.core.errors.NumbaDeprecationWarning",
    "ignore:.*nopython=False.*",
]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
no_warn_incomplete_stub = true
disable_error_code = [
    "import-untyped", 
    "import-not-found"
]
explicit_package_bases = true
install_types = true
non_interactive = true

